updated code files

--- a/package.json
+++ b/package.json
@@ -7,6 +7,13 @@
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "NODE_ENV=production next build",
+    "build:web": "next build && next export",
+    "pwa:build": "next build && next export",
+    "cap:init": "npx cap init DefinitionDetective com.example.definitiondetective --web-dir out",
+    "cap:copy": "npx cap copy",
+    "cap:add:android": "npx cap add android",
+    "cap:open:android": "npx cap open android",
+    "cap:sync": "npx cap sync",
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit"
@@ -65,6 +72,7 @@
     "@types/wav": "^1.0.2",
     "@typescript-eslint/eslint-plugin": "^8.47.0",
     "@typescript-eslint/parser": "^8.47.0",
+    "@capacitor/cli": "^5.0.5",
     "eslint": "^8.57.1",
     "eslint-config-next": "^16.0.3",
     "genkit-cli": "^1.2.1",
