(index):1  GET https://6000-firebase-studio-1761198320704.cluster-lu4mup

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "nextn",
+  "name": "definition-detective",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --port 9002 --hostname 0.0.0.0",
     "build": "next build",
@@ -44,7 +45,7 @@
     "firebase-admin": "^12.1.1",
     "genkit": "latest",
     "lucide-react": "^0.475.0",
-    "next": "14.2.5",
+    "next": "^15.0.0",
     "patch-package": "^8.0.0",
     "react": "latest",
     "react-day-picker": "^8.10.1",
@@ -63,7 +64,7 @@
     "@types/react-dom": "latest",
     "@types/wav": "^1.0.2",
     "eslint": "8.57.1",
-    "eslint-config-next": "14.2.5",
+    "eslint-config-next": "^15.0.0",
     "genkit-cli": "latest",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
