--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "definition-detective",
   "version": "0.1.0",
@@ -39,6 +40,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.1.7",
     "firebase": "^10.12.4",
     "firebase-admin": "^12.2.0",
@@ -58,6 +60,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/node": "^20",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
