Add complete mobile build setup with Capacitor
Mobile Build Features:
- Comprehensive MOBILE_BUILD_GUIDE.md (15 steps)
- Quick start guide MOBILE_QUICKSTART.md (30 min setup)
- Updated Capacitor configuration
- Mobile utility functions (haptics, share, status bar)
- Updated package.json with mobile scripts
- Next.js config ready for static export

Platforms Supported:
- Android (Google Play Store)
- iOS (Apple App Store)

Key Features:
- Native app builds
- Haptic feedback
- Share functionality
- Status bar control
- Platform detection
- App version checking

Build Scripts Added:
- npm run build:mobile - Build and sync
- npm run android - Open Android Studio
- npm run ios - Open Xcode
- npm run sync - Sync web to mobile

Documentation Includes:
- Step-by-step build instructions
- App store submission guide
- Icon and splash screen setup
- Permissions configuration
- Testing checklist
- Troubleshooting guide
- Performance optimization
- Analytics setup

Ready to build native iOS and Android apps!

Co-authored-by: Ona <no-reply@ona.com>

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,6 +1,24 @@
 {
-  "appId": "com.example.definitiondetective",
+  "appId": "com.definitiondetective.app",
   "appName": "Definition Detective",
   "webDir": "out",
-  "bundledWebRuntime": false
+  "bundledWebRuntime": false,
+  "server": {
+    "androidScheme": "https"
+  },
+  "plugins": {
+    "SplashScreen": {
+      "launchShowDuration": 2000,
+      "backgroundColor": "#673AB7",
+      "showSpinner": false
+    },
+    "StatusBar": {
+      "style": "dark",
+      "backgroundColor": "#673AB7"
+    },
+    "Keyboard": {
+      "resize": "body",
+      "style": "dark"
+    }
+  }
 }
