--- a/package.json
+++ b/package.json
@@ -5,13 +5,19 @@
   "scripts": {
     "dev": "next dev --port 9003 --hostname 0.0.0.0",
     "build": "next build",
+    "build:mobile": "next build && npx cap sync",
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
     "test:watch": "jest --watch",
     "typecheck": "tsc --noEmit",
     "genkit:dev": "genkit start -- tsx studio/src/ai/dev.ts",
-    "genkit:watch": "genkit start -- tsx --watch studio/src/ai/dev.ts"
+    "genkit:watch": "genkit start -- tsx --watch studio/src/ai/dev.ts",
+    "android": "npx cap open android",
+    "ios": "npx cap open ios",
+    "sync": "npx cap sync",
+    "sync:android": "npx cap sync android",
+    "sync:ios": "npx cap sync ios"
   },
   "type": "module",
   "dependencies": {
