--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,13 @@
-# Google Generative AI Configuration
+# AI Configuration
+
+# OpenAI Configuration (Primary - Recommended)
+# Get your API key from: https://platform.openai.com/api-keys
+OPENAI_API_KEY=your_openai_api_key_here
+
+# Google Generative AI Configuration (Fallback)
 # Get your API key from: https://makersuite.google.com/app/apikey
 GOOGLE_GENAI_API_KEY=your_google_genai_api_key_here
+GEMINI_API_KEY=your_google_genai_api_key_here
 
 # Optional: Specify a specific model to use
 # GOOGLE_GENAI_MODEL=googleai/gemini-1.5-flash-latest
